failed js functionality

--- a/index.html
+++ b/index.html
@@ -8,24 +8,25 @@
     <title>Tic Tac Toe</title>
 </head>
 <body>
-    <h1>Tic Tac Toe</h1>
+    <h1 id="header">Tic Tac Toe</h1>
     <div class="container">
         <div class="row-one">
-    <div id="row-one-column-one" class="cells"></div>
-    <div id="row-one-column-two" class="cells"></div>
-    <div id="row-one-column-three" class="cells"></div>
+    <div id="0" class="cells">1</div>
+    <div id="1" class="cells">2</div>
+    <div id="2" class="cells">3</div>
 </div>
 <div class="row-two">
-    <div id="row-two-column-one" class="cells"></div>
-    <div id="row-two-column-two" class="cells"></div>
-    <div id="row-two-column-three" class="cells"></div>
+    <div id="3" class="cells">4</div>
+    <div id="4" class="cells">5</div>
+    <div id="5" class="cells">6</div>
 </div>
 <div class="row-three">
-    <div id="row-three-column-one" class="cells"></div>
-    <div id="row-three-column-two" class="cells"></div>
-    <div id="row-three-column-three" class="cells"></div>
+    <div id="6" class="cells">7</div>
+    <div id="7" class="cells">8</div>
+    <div id="8" class="cells">9</div>
 </div>
     </div>
+    <button class="startGame">Start game</button>
    <script src="script.js"></script> 
 </body>
 </html>
